public/css/app/carousel.css
* {box-sizing:border-box}

.main-container {
    padding-top:0em;
}

/* Slideshow container */
.slideshow-container {
  width: 100%;
  height: 400px; /*Note we may change height in js code depending on height of window*/
  position: relative;
  margin: auto;
  overflow:hidden;
}

/* Transform is for centering purposes */
.slideshow-container img {
    height:auto;
    width:100%;
    display:inline-block;
    transform: translate(0%, -25%);
}
/* Hide the images by default */
.mySlides {
    display: none;
    height:100%;
}

/* Next & previous buttons */
.prev, .next {
  cursor: pointer;
  position: absolute;
  top: 50%;
  width: auto;
  margin-top: -22px;
  padding: 16px;
  color: white;
  font-weight: bold;
  font-size: 18px;
  transition: 0.6s ease;
  border-radius: 0 3px 3px 0;
  background-color:rgba(0,0,0,0.3);
}

/* Position the "next button" to the right */
.next {
  right: 0;
  border-radius: 3px 0 0 3px;
}

/* On hover, add a black background color with a little bit see-through */
.prev:hover, .next:hover {
  background-color: rgba(0,0,0,0.8);
  text-decoration:none;
}

/* Caption text */
.slideshow-caption {
  color: #f2f2f2;
  font-size: 15px;
  padding: 8px 12px;
  position: absolute;
  bottom: 8px;
  width: 100%;
  top:20%; /*Default*/
  left:15%;
}

.slideshow-caption .text{
}

.slideshow-caption .slideshow-title{
    font-weight:bold;
}
/* The dots/bullets/indicators */
.dot {
  cursor:pointer;
  height: 15px;
  width: 15px;
  margin: 0 2px;
  background-color: #bbb;
  border-radius: 50%;
  display: inline-block;
  transition: background-color 0.6s ease;
}

.active, .dot:hover {
  background-color: #717171;
}

.slideshow-footer {
    position:absolute;
    top:85%; /*Default*/
    text-align:center;
    z-index:100;
    width:100%;
    margin-left:auto;
    margin-right:auto;
}

.slideshow-footer .dots {
    cursor:pointer;
}

/* Fading animation from the right*/
.fade-carousel-right img {
  -webkit-animation-name: fade-right;
  -webkit-animation-duration: 1.5s;
  animation-name: fade-right;
  animation-duration: 1.5s;
  float:right;
}

/* Chrome and Safari */
@-webkit-keyframes fade-right {
  from {
    opacity: .4;
    width: 150%; 
  } 
  to {
    opacity: 1;
    width: 100%; 
  }
}

/* Firefox and IE */
@keyframes fade-right {
  from {
    opacity: .4;
    width: 150%; 
  } 

  to {
    opacity: 1;
    width: 100%; 
  }
}



/* Fading animation from the left*/
.fade-carousel-left img{
  -webkit-animation-name: fade-left;
  -webkit-animation-duration: 1.5s;
  animation-name: fade-left;
  animation-duration: 1.5s;
}

/* Chrome and Safari */
@-webkit-keyframes fade-left {
  from {
    opacity: .4;
    width: 150%; 
  } 
  to {
    opacity: 1;
    width: 100%; 
  }
}

/* Firefox and IE */
@keyframes fade-left {
  from {
    opacity: .4;
    width: 150%; 
  } 

  to {
    opacity: 1;
    width: 100%; 
  }
}

